--- a/website replication/webpage_replica.html
+++ b/website replication/webpage_replica.html
@@ -10,9 +10,18 @@
 </head>
 <body>
 <header>
+    <nav>
+        <ol style="list-style-type:none;">
+            <li><a href="#">Home</a></li>               # the # is a placeholder link for now 
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Product</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Contact</a></li>
+        </ol>
+    </nav>
     
 
-    </nav>
 
 
     <h1>    Where Marketing Careers are Built.  </h1>
