added p1 in header,button for how to get started and button for contact us page

--- a/website replication/webpage_replica.html
+++ b/website replication/webpage_replica.html
@@ -12,20 +12,20 @@
 <header>
     <nav>
         <ol style="list-style-type:none;">
-            <li><a href="#">Home</a></li>               # the # is a placeholder link for now 
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Product</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Contact</a></li>
+            # the # is a placeholder link for now 
+            <li><a href="#"> Product </a></li>
+            <li><a href="#"> Services </a></li>
+            <li><a href="#"> Careers </a></li>
+            <li><a href="#"> Pricing </a></li>
+            <li><a href="#"> About </a></li>    
+            
         </ol>
     </nav>
-    
-
-
-
     <h1>    Where Marketing Careers are Built.  </h1>
+    <p> We bring ideas to life by combining years of experience with our very talented team. </p>
 
+    <button> Build Career </button>
+    <button> Contact us </button>
 </header>
 
 
