slight changes, fixing a few mistakes with my comenting

--- a/website replication/webpage_replica.html
+++ b/website replication/webpage_replica.html
@@ -6,24 +6,24 @@
     <title>Webpage Replica</title>
     <link rel="replica_stylesheet" href="replica_stylesheet.css">
     <script src="replica_script.js"></script>
-
 </head>
+
 <body>
 <header>
     <nav>
-        <ol style="list-style-type:none;">
-            # the # is a placeholder link for now 
+        <ul style="list-style-type:none;">
+            <!--the # is a placeholder link for now -->
             <li><a href="#"> Product </a></li>
             <li><a href="#"> Services </a></li>
             <li><a href="#"> Careers </a></li>
             <li><a href="#"> Pricing </a></li>
-            <li><a href="#"> About </a></li>    
+            <li><a href="#"> About </a></li> 
+            <li><a href="#"> Login </a></li>    
             
-        </ol>
+        </ul>
     </nav>
     <h1>    Where Marketing Careers are Built.  </h1>
     <p> We bring ideas to life by combining years of experience with our very talented team. </p>
-
     <button> Build Career </button>
     <button> Contact us </button>
 </header>
