--- a/website replication/webpage_replica.html
+++ b/website replication/webpage_replica.html
@@ -11,7 +11,7 @@
 <body>
 <header>
     <nav>
-        <ul style="list-style-type:none;">
+        <ol style="list-style-type:none;">
             <!--the # is a placeholder link for now -->
             <li><a href="#"> Product </a></li>
             <li><a href="#"> Services </a></li>
@@ -20,7 +20,7 @@
             <li><a href="#"> About </a></li> 
             <li><a href="#"> Login </a></li>    
             
-        </ul>
+        </ol>
     </nav>
     <h1>    Where Marketing Careers are Built.  </h1>
     <p> We bring ideas to life by combining years of experience with our very talented team. </p>
