downloaded images, working on the background, and created a section

--- a/website replication/webpage_replica.html
+++ b/website replication/webpage_replica.html
@@ -27,7 +27,10 @@
     <button> Build Career </button>
     <button> Contact us </button>
 </header>
+<section class="background_image">
+    <button 
 
+</section>
 
 
 
