fixed the stylesheet connection

--- a/website replication/webpage_replica.html
+++ b/website replication/webpage_replica.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
     <title>Webpage Replica</title>
-    <link rel="replica_stylesheet" href="replica_stylesheet.css">
+    <link rel="stylesheet" href="replica_stylesheet.css">
     <script src="replica_script.js"></script>
 </head>
 
 <body>
 <header>
     <nav>
-        <ol style="list-style-type:none;">
+        <ol style="list-style-type:none;" class="">
             <!--the # is a placeholder link for now -->
             <li><a href="#"> Product </a></li>
             <li><a href="#"> Services </a></li>
@@ -28,7 +28,7 @@
     <button> Contact us </button>
 </header>
 <section class="background_image">
-    <button 
+    <button class="left_button"><button> EVENT </button> Building  career </button>
 
 </section>
 
