moved, the event button and build career button around, rounded the button borders

--- a/website replication/webpage_replica.html
+++ b/website replication/webpage_replica.html
@@ -13,22 +13,28 @@
     <nav>
         <ol style="list-style-type:none;" class="">
             <!--the # is a placeholder link for now -->
-            <li><a href="#"> Product </a></li>
-            <li><a href="#"> Services </a></li>
-            <li><a href="#"> Careers </a></li>
-            <li><a href="#"> Pricing </a></li>
-            <li><a href="#"> About </a></li> 
-            <li><a href="#"> Login </a></li>    
+            <li><button><a href="#"> Product </a></button></li>
+            <li><button><a href="#"> Services </a></button></li>
+            <li><button><a href="#"> Careers </a></button></li>
+            <li><button><a href="#"> Pricing</a> </button></li>
+            <li><button><a href="#"> About </a></button></li> 
+            <li><button><a href="#"> Login </a></button></li>    
             
         </ol>
+        <
     </nav>
     <h1>    Where Marketing Careers are Built.  </h1>
     <p> We bring ideas to life by combining years of experience with our very talented team. </p>
     <button> Build Career </button>
     <button> Contact us </button>
 </header>
-<section class="background_image">
-    <button class="left_button"><button> EVENT </button> Building  career </button>
+<section>
+    <div>
+        <button> EVENT </button>
+        <button class="left_button"> Building  career </button>
+    </div>
+    
+
 
 </section>
 
