removed butons from nav bar

--- a/website replication/webpage_replica.html
+++ b/website replication/webpage_replica.html
@@ -14,12 +14,12 @@
     <nav>
         <ol style="list-style-type:none;" class="">
             <!--the # is a placeholder link for now -->
-            <li><button><a href="#"> Product </a></button></li>
-            <li><button><a href="#"> Services </a></button></li>
-            <li><button><a href="#"> Careers </a></button></li>
-            <li><button><a href="#"> Pricing</a> </button></li>
-            <li><button><a href="#"> About </a></button></li> 
-            <li><button><a href="#"> Login </a></button></li>    
+            <li><a href="#"> Product </a><li>
+            <li><a href="#"> Services </a></li>
+            <li><a href="#"> Careers </a></li>
+            <li><a href="#"> Pricing </a></li>
+            <li><a href="#"> About </a></li> | 
+            <li><a href="#"> Login </a></li>    
             
         </ol>
         
@@ -30,7 +30,7 @@
     <button> Contact us </button>
 </header>
 
-<section class="">
+<section class="background_image">
     <div>
         <button> EVENT </button>
         <button class="left_button"> Building  career </button>
