* the images to be used in the replication website *  updated the hover effects and active link colours in the stylesheet *  corrected the header and head tags in the html file

--- a/website replication/webpage_replica.html
+++ b/website replication/webpage_replica.html
@@ -19,7 +19,7 @@
             <li><a href="#"> Careers </a></li>
             <li><a href="#"> Pricing </a></li>
             <li><a href="#"> About </a></li> | 
-            <li><a href="#"> Login </a></li>    
+            <li style="padding:60px"><a href="#"> Login </a></li>    
             
         </ol>
         
@@ -38,6 +38,8 @@
     </div>
     <div>
         <button> Job Opportunities </button>
+        <img src="corporate_lady" alt="corporate lady image">
+
 
     </div>
 
