--- a/website replication/webpage_replica.html
+++ b/website replication/webpage_replica.html
@@ -11,10 +11,9 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logo.png" alt="Company Logo" width="150" height="50">
-            
+            <img src="logo.png" alt="Company Logo" >
         </div>
-        <nav>
+        <nav class="sidebar">
             <ol class="ol-links"  style="list-style-type:none;" class="">
                 <!--the # is a placeholder link for now -->
                 <li><a href="#"> Product </a></li>
@@ -47,10 +46,27 @@
 </section>
 
 
+<footer class="footer-background">
+    <div class="footer-text">
+        <p> © 2025 Marketing Careers. All rights reserved. </p>
+    </div>
+    <div class="footer-links">
+        <a href="#"> Privacy Policy </a>    | <br>
+        <a href="#"> Terms of Service </a>  | <br>
+        <a href="#"> Contact Us </a>        | <br>
+    </div>
 
+    <div class="social-media">
+        <a href=""><img src="Facebook.png"> Facebook </a> 
+        <a href="#"><img src="twitter.png"> Twitter </a> 
+        <a href="#"><img src="linkedin.png"> LinkedIn </a> 
+        <a href="#"><img src="Instagram.png"> Instagram </a>
+    </div>
 
-
-
+    <div class="logo" style="bottom: right; ">
+        <img src="logo.png" alt="Company Logo" width="100" height="30">
+    </div>
+</footer>
 
 </body>
 </html>
