--- a/website replication/webpage_replica.html
+++ b/website replication/webpage_replica.html
@@ -62,10 +62,13 @@
         <a href="#"><img src="linkedin.png"> LinkedIn </a> 
         <a href="#"><img src="Instagram.png"> Instagram </a>
     </div>
-
-    <div class="logo" style="bottom: right; ">
-        <img src="logo.png" alt="Company Logo" width="100" height="30">
+    
+    <!---
+    <div class="footer-logo">
+        <img src="logo.png" alt="Company Logo">    
     </div>
+    -->
+    
 </footer>
 
 </body>
