--- a/website replication/webpage_replica.html
+++ b/website replication/webpage_replica.html
@@ -51,9 +51,14 @@
         <p> © 2025 Marketing Careers. All rights reserved. </p>
     </div>
     <div class="footer-links">
-        <a href="#"> Privacy Policy </a>    | <br>
+        <ul>
+            <li><a href="#"> Privacy Policy </a> | </li>
+            <li><a href="#"> Terms of Service </a> | </li>
+            <li><a href="#"> Contact Us </a> | </li>
+        </ul>
+        <!--  <a href="#"> Privacy Policy </a>    | <br>
         <a href="#"> Terms of Service </a>  | <br>
-        <a href="#"> Contact Us </a>        | <br>
+        <a href="#"> Contact Us </a>        | <br>-->
     </div>
 
     <div class="social-media">
@@ -62,7 +67,7 @@
         <a href="#"><img src="linkedin.png"> LinkedIn </a> 
         <a href="#"><img src="Instagram.png"> Instagram </a>
     </div>
-    
+
     <!---
     <div class="footer-logo">
         <img src="logo.png" alt="Company Logo">    
